2008-02-02  Jürg Billeter  <j@bitron.ch>

	* compiler/valacompiler.vala: use --directory when writing vapi file

2008-02-02  Jürg Billeter  <j@bitron.ch>

	* vala/valasourcefile.vala: remove basedir workaround used for
	  backward compatibility, so that --library without --basedir
	  works as expected

2008-02-02  Jürg Billeter  <j@bitron.ch>

	* vapi/atk.vapi, vapi/gdk-2.0.vapi, vapi/gio-2.0.vapi,
	  vapi/gnome-vfs-2.0.vapi, vapi/gstreamer-0.10.vapi,
	  vapi/gstreamer-audio-0.10.vapi, vapi/gstreamer-base-0.10.vapi,
	  vapi/gstreamer-interfaces-0.10.vapi, vapi/gstreamer-rtp-0.10.vapi,
	  vapi/gstreamer-tag-0.10.vapi, vapi/gtk+-2.0.vapi,
	  vapi/libglade-2.0.vapi, vapi/liboobs-1.vapi, vapi/libsoup-2.2.vapi,
	  vapi/libsoup-2.4.vapi, vapi/libwnck-1.0.vapi, vapi/pango.vapi,
	  vapi/vte.vapi, vapi/WebKitGtk.vapi: regenerated

2008-02-02  Jürg Billeter  <j@bitron.ch>

	* gobject-introspection/gidl.vapi, vapigen/valagidlparser.vala:
	  improve support for virtual methods,
	  based on patch by Michael Lawrence, fixes bug 452019

2008-02-02  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/packages/gdk-x11-2.0/, vapi/gdk-x11-2.0.deps,
	  vapi/gdk-x11-2.0.vapi: add gdk-x11-2.0 bindings,
	  patch by Maciej Piechotka, fixes bug 510336

2008-02-02  Jürg Billeter  <j@bitron.ch>

	* vala/valaproperty.vala, gobject/valaccodegeneratorinterface.vala:
	  support [Description (nick = "foo", blurb = "bar")] attribute,
	  based on patch by Juan Carlos Girardi, fixes part of bug 437434

2008-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valaproperty.vala, vala/valasemanticanalyzer.vala:
	  report error when declaring static properties

2008-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: report error for binary
	  expressions with invalid operands, fixes bug 513708

2008-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/valacatchclause.vala, vala/valacfgbuilder.vala,
	  vala/valasemanticanalyzer.vala: fix crash when using general